# flask-daily-diet-api

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requiremets-dev.txt
.github/workflows/: bum_version.yaml  bump_version.yaml  ci.yaml
dailydiet/: __init__.py  app.py  config.py  models.py
dailydiet/repositories/: meal.py
dailydiet/routers/: meals.py  ping.py
dailydiet/validaton/: errors.py  meal.py  utils.py
migrations/versions/: c27fa7ee9f18_create_meals_table.py
tests/: conftest.py
tests/e2e/: test_meal.py  test_ping.py
