[tool.poetry]
name = "flask-daily-diet-api"
version = "0.8.0"
description = "API para controle de dieta diária"
authors = ["Cleyson <cleysonph@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
pytest = "^7.4.4"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.black]
line-length = 79
